# testcontainers-spicedb-py

./: .gitignore  README.md  README_PYTHON.md  examples_test.go  pyproject.toml  requirements.txt  spicedb.go  spicedb_test.go
.github/workflows/: publish.yml  python-tests.yml
examples/: example_spicedb.py
testcontainers_spicedb/: __init__.py  spicedb.py
testcontainers_spicedb/testdata/: __init__.py
tests/: __init__.py  test_spicedb.py
