[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testcontainers-spicedb"
version = "0.1.2"
description = "Python module for Testcontainers that provides a SpiceDB container for integration testing."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sohan Maheshwar", email = "sohan.maheshwar@authzed.com"}
]
keywords = ["testcontainers", "spicedb", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "testcontainers>=4.0.0",
    "authzed>=0.10.0",
    "grpcio>=1.50.0",
]

[project.urls]
Homepage = "https://github.com/sohanmaheshwar/testcontainers-spicedb-py"
Documentation = "https://github.com/sohanmaheshwar/testcontainers-spicedb-py#readme"
Repository = "https://github.com/sohanmaheshwar/testcontainers-spicedb-py"
Issues = "https://github.com/sohanmaheshwar/testcontainers-spicedb-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["testcontainers_spicedb*"]
